test_suite5/ALAN/test_suite/alan-2022-examples/failing/008340_mutation.alan
source ZAG5a function Cz() "6I" to boolean begin relax end begin relax end
